--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
   <header class="header">
-    <span class="logo">Сайт Сергея Петрова</span>
+    <span class="logo"></span>
   </header>
 
   <div class="hero">
