--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
   <div class="hero">
     <div class="container hero__container">
       <div class="hero__about">
-        <h1 class="hero__title">Веб-разработчик</h1>
-        <h2 class="hero__subtitle">Сергей петров</h2>
+        <h1 class="hero__title">Равшан Ибатулин</h1>
+        <h2 class="hero__subtitle">Начальник научно-исследовательского центра инженерно-физического анализа и расчетов</h2>
         <p class="hero__description">
-          Привет, я занимаюсь версткой адаптивных сайтов по макету. Пишите для сотрудничества.
+          Для связи можно воспользоваться одним из представленных способов.
         </p>
 
 
