--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
 
         <div class="hero__links">
           <a class="hero__link" href="#" target="_blank"><i class='bx bxl-vk'></i></a>
-          <a class="hero__link" href="#"><i class='bx bxl-facebook'></i></a>
-          <a class="hero__link" href="#"><i class='bx bxl-instagram'></i></a>
-          <a class="hero__link" href="#"><i class='bx bxl-pinterest'></i></a>
+          <a class="hero__link" href="https://t.me/r_kamalovich"><i class='bx bxl-telegram'></i></a>
+          <a class="hero__link" href="https://vk.com/r_kamalovich"><i class='bx bxl-vk'></i></a>
         </div>
 
 
