--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
 
 
         <div class="hero__links">
-          <a class="hero__link" href="#" target="_blank"><i class='bx bxl-vk'></i></a>
-          <a class="hero__link" href="https://t.me/r_kamalovich"><i class='bx bxl-telegram'></i></a>
-          <a class="hero__link" href="https://vk.com/r_kamalovich"><i class='bx bxl-vk'></i></a>
+          <a class="hero__link" href="https://t.me/r_kamalovich" target="_blank"><i class='bx bxl-telegram'></i></a>
+          <a class="hero__link" href="https://vk.com/r_kamalovich" target="_blank"><i class='bx bxl-vk'></i></a>
         </div>
 
 
