--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <div class="container hero__container">
       <div class="hero__about">
         <h1 class="hero__title">Равшан Ибатулин</h1>
-        <h2 class="hero__subtitle">Начальник научно-исследовательского центра инженерно-физического анализа и расчетов</h2>
+        <h2 class="hero__subtitle">Начальник НИЦ инженерно-физического анализа и расчетов</h2>
+        <h3 class="hero__subtitle">Научно-исследовательский центр инженерно-физического анализа и расчетов ООО "Пожарный инженер"</h3>
         <p class="hero__description">
           Для связи можно воспользоваться одним из представленных способов.
         </p>
@@ -34,6 +35,7 @@
         <div class="hero__links">
           <a class="hero__link" href="https://t.me/r_kamalovich" target="_blank"><i class='bx bxl-telegram'></i></a>
           <a class="hero__link" href="https://vk.com/r_kamalovich" target="_blank"><i class='bx bxl-vk'></i></a>
+          <a class="hero__link" href="https://vk.com/r_kamalovich" target="_blank"><i class='bx bxs-envelope'></i></a>
         </div>
 
 
