--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="hero__links">
           <a class="hero__link" href="https://t.me/r_kamalovich" target="_blank"><i class='bx bxl-telegram'></i></a>
           <a class="hero__link" href="https://vk.com/r_kamalovich" target="_blank"><i class='bx bxl-vk'></i></a>
-          <a class="hero__link" href="https://vk.com/r_kamalovich" target="_blank"><i class='bx bxs-envelope'></i></a>
+          <a class="hero__link" href="mailto:ibatulin@fireengin.ru" target="_blank"><i class='bx bxs-envelope'></i></a>
         </div>
 
 
