--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
       <div class="hero__about">
         <h1 class="hero__title">Равшан Ибатулин</h1>
         <h2 class="hero__subtitle">Начальник НИЦ инженерно-физического анализа и расчетов</h2>
-        <h3 class="hero__subtitle">Научно-исследовательский центр инженерно-физического анализа и расчетов ООО "Пожарный инженер"</h3>
+        <h3 class="hero__work_title">Научно-исследовательский центр инженерно-физического анализа и расчетов"</h3>
+        <h4 class="hero__work_subtitle" href="https://fireengin.ru/" target="_blank">ООО "Пожарный инженер"</h4>
         <p class="hero__description">
           Для связи можно воспользоваться одним из представленных способов.
         </p>
@@ -36,6 +37,7 @@
           <a class="hero__link" href="https://t.me/r_kamalovich" target="_blank"><i class='bx bxl-telegram'></i></a>
           <a class="hero__link" href="https://vk.com/r_kamalovich" target="_blank"><i class='bx bxl-vk'></i></a>
           <a class="hero__link" href="mailto:ibatulin@fireengin.ru" target="_blank"><i class='bx bxs-envelope'></i></a>
+          <a class="hero__link" href="https://fireengin.ru/" target="_blank"><i class='bx bxs-briefcase'></i></a>
         </div>
 
 
