--- a/index.html
+++ b/index.html
@@ -18,16 +18,15 @@
 <body>
 
   <header class="header">
-    <span class="logo"></span>
+    <span class="logo">ООО "Пожарный инженер"</span>
   </header>
 
   <div class="hero">
     <div class="container hero__container">
       <div class="hero__about">
         <h1 class="hero__title">Равшан Ибатулин</h1>
-        <h2 class="hero__subtitle">начальник НИЦ инженерно-физического анализа и расчетов</h2>
+        <h2 class="hero__subtitle">Начальник НИЦ ИФАР</h2>
         <h3 class="hero__work_title">научно-исследовательский центр инженерно-физического анализа и расчетов"</h3>
-        <h4 class="hero__work_subtitle" href="https://fireengin.ru/" target="_blank">ООО "Пожарный инженер"</h4>
         <p class="hero__description">
           Для связи можно воспользоваться одним из представленных способов.
         </p>
