--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="hero__about">
         <h1 class="hero__title">Равшан Ибатулин</h1>
         <h2 class="hero__subtitle">Начальник НИЦ ИФАР</h2>
-        <h3 class="hero__work_title">научно-исследовательский центр инженерно-физического анализа и расчетов"</h3>
+        <h3 class="hero__work_title">научно-исследовательский центр инженерно-физического анализа и расчетов</h3>
         <p class="hero__description">
           Для связи можно воспользоваться одним из представленных способов.
         </p>
