--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
     <div class="container hero__container">
       <div class="hero__about">
         <h1 class="hero__title">Равшан Ибатулин</h1>
-        <h2 class="hero__subtitle">Начальник НИЦ ИФАР</h2>
-        <h3 class="hero__work_title">научно-исследовательский центр инженерно-физического анализа и расчетов</h3>
+        <h2 class="hero__title_science">кандидат технических наук</h2>
+        <h3 class="hero__subtitle">Начальник НИЦ ИФАР</h3>
+        <h4 class="hero__work_title">научно-исследовательский центр инженерно-физического анализа и расчетов</h4>
         <p class="hero__description">
           Для связи можно воспользоваться одним из представленных способов.
         </p>
