--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <div class="hero__links">
           <a class="hero__link" href="tel: +79998140101" target="_blank"><i class='bx bxs-phone'></i></a>
-          <a class="hero__link" href="mailto: ibatulin@fireengin.ru" target="_blank"><i class='bx bxs-envelope'></i></a>
+          <a class="hero__link" href="ibatulin@fireengin.ru" target="_blank"><i class='bx bxs-envelope'></i></a>
           <a class="hero__link" href="https://t.me/r_kamalovich" target="_blank"><i class='bx bxl-telegram'></i></a>
           <a class="hero__link" href="https://vk.com/r_kamalovich" target="_blank"><i class='bx bxl-vk'></i></a>
           <a class="hero__link" href="https://fireengin.ru/" target="_blank"><i class='bx bxs-briefcase'></i></a>
