--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
           <a class="hero__link" href="https://t.me/r_kamalovich" target="_blank"><i class='bx bxl-telegram'></i></a>
           <a class="hero__link" href="https://vk.com/r_kamalovich" target="_blank"><i class='bx bxl-vk'></i></a>
           <a class="hero__link" href="https://fireengin.ru/" target="_blank"><i class='bx bxs-briefcase'></i></a>
+          <a class="hero__link" href="https://t.me/pro_raschety" target="_blank"><i class='bx bxs-tv'></i></a>
         </div>
 
 
